# forge

./: .gitignore  AGENTS.md  Cargo.toml  README.md  justfile
.agents/skills/api-and-interface-design/: SKILL.md  THIRD_PARTY_NOTICES.md
.agents/skills/autoresearch-create/: SKILL.md
.agents/skills/autoresearch-finalize/: SKILL.md
.agents/skills/autoreview/: SKILL.md  THIRD_PARTY_NOTICES.md
.agents/skills/bytefield-diagrams/: SKILL.md
.agents/skills/chrome-devtools-mcp/: SKILL.md
.agents/skills/code-simplification/: SKILL.md  THIRD_PARTY_NOTICES.md
.agents/skills/codegraph/: SKILL.md
.agents/skills/codex-threads-cli/: SKILL.md
.agents/skills/create-release-process/: SKILL.md
.agents/skills/cut-release/: SKILL.md
.agents/skills/debugging-and-error-recovery/: SKILL.md  THIRD_PARTY_NOTICES.md
.agents/skills/design-algorithm/: SKILL.md
.agents/skills/documentation-and-adrs/: SKILL.md  THIRD_PARTY_NOTICES.md
.agents/skills/effective-loop-writer/: SKILL.md
.agents/skills/forge-cli/: SKILL.md
.agents/skills/forge-cli-admin/: SKILL.md
.agents/skills/forge-tools/: SKILL.md
.agents/skills/gh-body-file/: SKILL.md
.agents/skills/git-forge-body-file/: SKILL.md
.agents/skills/learning-systems/: SKILL.md
.agents/skills/linear-cli/: SKILL.md
.agents/skills/mermaid-diagrams/: SKILL.md
.agents/skills/mermaid-diagrams/examples/: c4-context-basic.mmd  class-basic.mmd  flowchart-basic.mmd  flowchart-styled.mmd  gantt-basic.mmd  gitgraph-basic.mmd  journey-basic.mmd  pie-basic.mmd  sequence-basic.mmd  sequence-blogging-app.mmd  sequence-boxes-activation.mmd  sequence-loops-alt-opt.mmd  sequence-par-critical-break.mmd  sequence-self-loop.mmd  state-basic.mmd
.agents/skills/mermaid-diagrams/references/: authoring-models.md  business-diagrams.md  diagram-selection.md  examples.md  foundations.md  rendering.md  technical-diagrams.md
.agents/skills/schemdraw/: SKILL.md
.agents/skills/schemdraw/examples/: amd_xilinx_14pin_jtag_harness.py  amd_xilinx_to_shrouded_header_adapter.py  arm20_jtag_header.py  arm20_swd_header.py  basic_rc.py  cortex9_swd_header.py  door_controller.py  dsub_breakout.py  ethernet_link.py  ethernet_poe_link.py  flow_block.py  grove_i2c_link.py  harness_bundle.py  i2c_multidrop.py  i2c_sensor.py  icd_connector.py  intel_fpga_10pin_jtag_harness.py  intel_fpga_to_circular10_adapter.py  jtag_fpga.py  mdio_link.py  msp430_fet_jtag_harness.py  msp430_fet_to_microd15_adapter.py  onewire_sensor.py  opamp_feedback.py  pps_sync.py  qwiic_i2c_link.py  register_map.json  rs422_link.py  rs485_bus.py  rs485_multidrop.py  spacewire_link.py  spi_peripheral.py  state_machine_acceptor.py  swd_programming.py  timing_bus.json  timing_jk_flipflop.json  timing_sram_rw.json  uart_serial.py
.agents/skills/schemdraw/examples/helpers/: __init__.py  connectors.py  pinmap.py  protocols.py  schema.py
.agents/skills/schemdraw/references/: categories.md  protocols.md  schemdraw.md  sdl.md  timing.md
.agents/skills/schemdraw/tool/: pyproject.toml
.agents/skills/schemdraw/tool/src/forge_schemdraw/: __init__.py  cli.py
.agents/skills/security-and-hardening/: SKILL.md  THIRD_PARTY_NOTICES.md
.agents/skills/slack-agent-cli/: SKILL.md
.agents/skills/slack-cli-research/: SKILL.md
.agents/skills/slack-query-cli/: SKILL.md
.agents/skills/slack-query-research/: SKILL.md
.agents/skills/source-driven-development/: SKILL.md  THIRD_PARTY_NOTICES.md
.agents/skills/test-strategy/: SKILL.md  THIRD_PARTY_NOTICES.md
.agents/skills/thinking-in-the-limit/: SKILL.md
.agents/skills/typst-documents/: SKILL.md
.agents/skills/webwright/: SKILL.md  THIRD_PARTY_NOTICES.md
.agents/skills/webwright/reference/: cli_tool_mode.md  playwright_patterns.md  workflow.md
.github/workflows/: ci.yml  release-artifacts.yml
codex/user/: AGENTS.md
codex/user/config/: config.portable.toml  config.toml.example
codex/user/config/agents/: fast.toml.example  planner.toml.example  researcher.toml.example
codex/user/fragments/: principles.md
codex/user/fragments/characters/: pragmatic-builder.md
codex/user/rules/: user-policy.rules
config/: release-skills.toml  release-tools.toml
crates/cli-core/: Cargo.toml
crates/cli-core/src/: lib.rs
crates/codex-threads/: Cargo.toml
crates/codex-threads/src/: main.rs
crates/codex-threads/tests/: cli.rs
crates/forge/: Cargo.toml
crates/forge/src/: main.rs  tool_update.rs  windows_terminal.rs
crates/forge/src/tool_update/: catalog.rs
crates/forge/tests/: cli.rs
crates/linear/: Cargo.toml
crates/linear-cli/: Cargo.toml
crates/linear-cli/src/: main.rs
crates/linear/src/: main.rs
crates/linear/tests/: cli.rs
crates/mermaid/: Cargo.toml
crates/mermaid/src/: main.rs
crates/slack-agent/: Cargo.toml
crates/slack-agent/src/: main.rs
crates/slack-agent/tests/: cli.rs
crates/slack-cli/: Cargo.toml
crates/slack-cli/src/: main.rs
crates/slack-cli/tests/: cli.rs
crates/slack-core/: Cargo.toml
crates/slack-core/src/: lib.rs
crates/slack-query/: Cargo.toml
crates/slack-query/src/: main.rs
crates/slack-query/tests/: cli.rs
docs/: aerospace-antipatterns.md  agent-friendly-clis.md  algorithm.md  codex-threads.md  codex.md  development.md  forge-skills.md  forge.md  install-speed.md  linear.md  mermaid.md  openclaw-slack.md  preferences.md  release.md  skill-intake.md  slack-agent.md  slack-cli.md  slack-query.md
scripts/: build-forge-release-artifact.sh  build-forge-release-manifest.sh  bump-version.sh  check-forge-binaries.sh  cut-release.sh  install-forge-dev-local.sh  install-forge-dev-repo.sh  install-forge-dev.sh  install-forge-release.sh
