[package]
name = "cli-core"
version = "20260720.0.0"
edition = "2024"
description = "Shared CLI helpers for Forge command-line tools"
license = "MIT"
repository = "https://github.com/iancleary/forge"
readme = "../../README.md"
publish = false

[dependencies]
anyhow = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
