[package]
name = "codex-threads"
version = "20260714.0.2"
edition = "2024"
description = "Search and inspect local Codex thread archives"
license = "MIT"
repository = "https://github.com/iancleary/forge"
readme = "../../README.md"
publish = false

[dependencies]
anyhow = "1"
cli-core = { path = "../cli-core" }
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
