[package]
name = "forge"
version = "20260416.0.2"
edition = "2024"
license = "MIT"

[dependencies]
anyhow = "1"
cli-core = { path = "../cli-core" }
clap = { version = "4", features = ["derive"] }
flate2 = "1"
indicatif = "0.17"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
sha2 = "0.10"
tar = "0.4"
toml = "0.8"
