[package]
name = "forge"
version = "20260714.0.2"
edition = "2024"
description = "Ian Cleary's personal command-line toolbox and release installer"
license = "MIT"
repository = "https://github.com/iancleary/forge"
readme = "../../README.md"
publish = false

[dependencies]
anyhow = "1"
cli-core = { path = "../cli-core" }
clap = { version = "4", features = ["derive"] }
flate2 = "1"
indicatif = "0.17"
jsonc-parser = { version = "0.32", features = ["cst"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
sha2 = "0.10"
tar = "0.4"
toml = "0.8"

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.61", features = ["Win32_Storage_FileSystem"] }
