[package]
name = "linear"
version = "20260416.0.2"
edition = "2024"
license = "MIT"

[dependencies]
anyhow = "1"
cli-core = { path = "../cli-core" }
clap = { version = "4", features = ["derive"] }
clap_complete = "4"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
toml = "0.8"
