[package]
name = "mermaid"
version = "20260720.0.0"
edition = "2024"
description = "Mermaid diagram rendering helpers for Forge workflows"
license = "MIT"
repository = "https://github.com/iancleary/forge"
readme = "../../README.md"
publish = false

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
cli-core = { path = "../cli-core" }
serde = { version = "1", features = ["derive"] }
