[package]
name = "slack-agent"
version = "20260412.0.5"
edition = "2024"
license = "MIT"

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "multipart", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
slack-core = { path = "../slack-core" }
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
toml = "0.8"
