[package]
name = "slack-core"
version = "20260720.0.0"
edition = "2024"
description = "Shared Slack API helpers for Forge command-line tools"
license = "MIT"
repository = "https://github.com/iancleary/forge"
readme = "../../README.md"
publish = false

[dependencies]
anyhow = "1"
cli-core = { path = "../cli-core" }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
