[package]
name = "slack-query"
version = "20260714.0.2"
edition = "2024"
description = "Deterministic Slack retrieval CLI helpers for Forge workflows"
license = "MIT"
repository = "https://github.com/iancleary/forge"
readme = "../../README.md"
publish = false

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
slack-core = { path = "../slack-core" }
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
toml = "0.8"
url = "2"
